resources/linkerd-servicemesh/sample-apps/emojivoto-web-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc-2
  namespace: emojivoto
#  annotations:
#    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: web-svc
  type: ClusterIP
